--- a/.deosrc
+++ b/.deosrc
@@ -11,11 +11,11 @@ export DeOS_BOOT_ARGS_NGINX:=-e
 export DeOS_BOOT_ARGS_PYTHON:=-c
 export DeOS_BOOT_PATH:=/deos/src/boot
 export DeOS_BOOT_SCRIPT:=./src/boot/index.sh
-export DeOS_BUILD_BITCOIN:=$(FALSE)
+export DeOS_BUILD_BITCOIN:=$(TRUE)
 export DeOS_BUILD_BLOCKSTACK:=$(FALSE)
 export DeOS_BUILD_DOCKER:=$(FALSE)
-export DeOS_BUILD_NGINX:=$(TRUE)
-export DeOS_BUILD_PYTHON:=$(FALSE)
+export DeOS_BUILD_NGINX:=$(FALSE)
+export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
 export DeOS_HOST_OS:=$(shell uname -s)
 
