--- a/.deosrc
+++ b/.deosrc
@@ -19,7 +19,7 @@ export DeOS_BUILD_PYTHON:=$(FALSE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
 export DeOS_CONFIG_FASTBOOT:=$(TRUE)
 export DeOS_HOST_OS:=$(shell uname -s)
-export DeOS_RUN_SERVER:=$(TRUE)
+export DeOS_RUN_SERVER:=$(FALSE)
 export DeOS_VM_BOX:=bento/ubuntu-16.04
 export DeOS_VM_USER:=vagrant
 export DeOS_VM_SHELL_DEFAULT:=bash -c 'BASH_ENV=/etc/profile exec bash'
