--- a/.deosrc
+++ b/.deosrc
@@ -5,7 +5,7 @@ BIN:=$(BASEDIR)/bin
 
 export DeOS_BOOT_ARGS_BITCOIN:=-b
 export DeOS_BOOT_ARGS_BLOCKSTACK:=-d
-export DeOS_BOOT_ARGS_BOOTSTRAP:=-a
+export DeOS_BOOT_ARGS_BOOTSTRAP:=-a test
 export DeOS_BOOT_ARGS_DOCKER:=-f
 export DeOS_BOOT_ARGS_NGINX:=-e
 export DeOS_BOOT_ARGS_PYTHON:=-c
