--- a/.deos.ini
+++ b/.deos.ini
@@ -1,4 +1,40 @@
 root=true
 
-[profile]
-user=atd
+[.deosrc]
+type=make
+
+[.{editor,flow}config]
+type=ini
+
+[.git{attributes,ignore}]
+type=txt
+
+[.nvmrc]
+type=txt
+
+[.travis.yml]
+type=yaml
+
+[{LICENSE,README}.md]
+static=true
+type=markdown
+
+[Gulpfile.babel.js]
+type=es6
+
+[Makefile]
+type=make
+
+[Vagrantfile]
+type=ruby
+
+[main.py]
+static=true
+type=python
+
+[package.json]
+type=json
+
+[yarn.lock]
+static=true
+type=yaml
