--- a/Deosfile.ini
+++ b/Deosfile.ini
@@ -19,6 +19,16 @@ type=yaml
 static=true
 type=markdown
 
+[Deosfile.*yml]
+config=true
+static=true
+type=yaml
+
+[Deosfile.ini]
+config=true
+static=true
+type=ini
+
 [Gulpfile.babel.js]
 type=es6
 
