--- a/.deosrc
+++ b/.deosrc
@@ -96,42 +96,6 @@ UPCMD:="vagrant up --provider virtualbox"
 VMCMD:="cd /deos; bash -i -c 'ipython --profile=deos'"
 GIT_BITCOIN:=git@github.com:DeSantisInc/bitcoin.git
 
-FILES:=\
-.deosrc\
-.editorconfig\
-.gitattributes\
-.gitignore\
-.nvmrc\
-.travis.yml\
-LICENSE.md\
-Makefile\
-README.md\
-Vagrantfile\
-yarn.lock\
-app/yarn.lock\
-bin/deos\
-bin/logic\
-bin/printm\
-src/deos/logic.mk\
-src/deos/test.mk\
-src/flow/css-modules.js\
-src/ipython/ipython_config.py\
-src/atdlib.h\
-src/deArray.c\
-src/deArray.h\
-src/deContainer.c\
-src/deContainer.h\
-src/deGroup.c\
-src/deGroup.h\
-src/deList.c\
-src/deList.h\
-src/deListNode.c\
-src/deListNode.h\
-src/deNetwork.c\
-src/deNetwork.h\
-src/main.c\
-var/assets/icons/512x512.png\
-var/build/es5/.gitkeep\
-var/build/obj/.gitkeep
-
-include src/host/index.mk
+include src/host/files.mk
+include src/host/test.mk
+include src/host/vbox.mk
