update: boot/blockstack.lz

--- a/.deosrc
+++ b/.deosrc
@@ -14,7 +14,7 @@ export DeOS_BOOT_SCRIPT:=./src/lizard.sh
 export DeOS_BUILD_BITCOIN:=$(TRUE)
 export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
 export DeOS_BUILD_DOCKER:=$(FALSE)
-export DeOS_BUILD_NGINX:=$(TRUE)
+export DeOS_BUILD_NGINX:=$(FALSE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
 export DeOS_CONFIG_FASTBOOT:=$(TRUE)
