--- a/.deosrc
+++ b/.deosrc
@@ -3,12 +3,12 @@ include src/host/common.mk
 BASEDIR:=$(CURDIR)
 BIN:=$(BASEDIR)/bin
 
-export DeOS_BOOT_ARGS_BITCOIN:=-b
-export DeOS_BOOT_ARGS_BLOCKSTACK:=-d
+export DeOS_BOOT_ARGS_BITCOIN:=-c bitcoind
+export DeOS_BOOT_ARGS_BLOCKSTACK:=-c blockstack
 export DeOS_BOOT_ARGS_BOOTSTRAP:=-a test
 export DeOS_BOOT_ARGS_DOCKER:=-f
 export DeOS_BOOT_ARGS_NGINX:=-e
-export DeOS_BOOT_ARGS_PYTHON:=-c
+export DeOS_BOOT_ARGS_PYTHON:=-c python
 export DeOS_BOOT_PATH:=/deos/boot
 export DeOS_BOOT_SCRIPT:=./src/lizard.sh
 export DeOS_BUILD_BITCOIN:=$(TRUE)
