fixed: bitcoin pgp issue

--- a/.deosrc
+++ b/.deosrc
@@ -17,7 +17,7 @@ export DeOS_BUILD_DOCKER:=$(FALSE)
 export DeOS_BUILD_NGINX:=$(FALSE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
-export DeOS_CONFIG_FASTBOOT:=$(TRUE)
+export DeOS_CONFIG_FASTBOOT:=$(FALSE)
 export DeOS_HOST_OS:=$(shell uname -s)
 export DeOS_RUN_SERVER:=$(FALSE)
 export DeOS_VM_BOX:=bento/ubuntu-16.04
