mv: static -> var

--- a/.deosrc
+++ b/.deosrc
@@ -64,7 +64,7 @@ DEOS:=$(BASEDIR)/bin/deos
 LIB:=$(BASEDIR)/lib
 PRINTM:=$(BASEDIR)/.deos/bin/darwin/printm
 SRC:=$(BASEDIR)/src
-STATIC:=$(BASEDIR)/static
+STATIC:=$(BASEDIR)/var
 VENV:=$(BASEDIR)/.deos/venv
 
 export VM_BASHRC:=/home/$(DeOS_VM_USER)/.bashrc
