--- a/.deosrc
+++ b/.deosrc
@@ -11,17 +11,17 @@ DeOS_YUBIKEY_PATH_TOOLS:=$(BASEDIR)/dev/yubikey/tools
 DeOS_YUBIKEY_APP:=deos
 DeOS_YUBIKEY_USER:=atd@gmx.it
 
-export DeOS_BOOT_ARGS_BITCOIN:=-b
-export DeOS_BOOT_ARGS_BLOCKSTACK:=-d
-export DeOS_BOOT_ARGS_BOOTSTRAP:=-a test
+export DeOS_BOOT_ARGS_BITCOIN:=-c bitcoind
+export DeOS_BOOT_ARGS_BLOCKSTACK:=-c blockstack
+export DeOS_BOOT_ARGS_BOOTSTRAP:=-c init
 export DeOS_BOOT_ARGS_DOCKER:=-f
 export DeOS_BOOT_ARGS_NGINX:=-e
-export DeOS_BOOT_ARGS_PYTHON:=-c
+export DeOS_BOOT_ARGS_PYTHON:=-c python
 export DeOS_BOOT_PATH:=/deos/boot
 export DeOS_BOOT_SCRIPT:=./src/build.sh
 export DeOS_BUILD_BITCOIN:=$(TRUE)
-export DeOS_BUILD_BLOCKSTACK:=$(FALSE)
-export DeOS_BUILD_DOCKER:=$(FALSE)
+export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
+export DeOS_BUILD_DOCKER:=$(TRUE)
 export DeOS_BUILD_NGINX:=$(TRUE)
 export DeOS_BUILD_PYTHON:=$(TRUE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
