--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,39 @@
 [submodule "dev/yubikey"]
 	path = dev/yubikey
 	url = https://github.com/scumjr/yubikeyedup
+[submodule "ext/blockstack/blockstack-cli"]
+	path = ext/blockstack/blockstack-cli
+	url = https://github.com/blockstack/blockstack-cli.git
+[submodule "ext/blockstack/dns-zone-file-py"]
+	path = ext/blockstack/dns-zone-file-py
+	url = https://github.com/blockstack/dns-zone-file-py.git
+[submodule "ext/blockstack/blockstack-profiles-py"]
+	path = ext/blockstack/blockstack-profiles-py
+	url = https://github.com/blockstack/blockstack-profiles-py.git
+[submodule "ext/blockstack/virtualchain"]
+	path = ext/blockstack/virtualchain
+	url = https://github.com/blockstack/virtualchain.git
+[submodule "ext/blockstack/blockstack-core"]
+	path = ext/blockstack/blockstack-core
+	url = https://github.com/blockstack/blockstack-core.git
+[submodule "ext/blockstack/blockstack-files"]
+	path = ext/blockstack/blockstack-files
+	url = https://github.com/blockstack/blockstack-files.git
+[submodule "ext/blockstack/blockstack-gpg"]
+	path = ext/blockstack/blockstack-gpg
+	url = https://github.com/blockstack/blockstack-gpg.git
+[submodule "test/blockstack-integration-tests"]
+	path = test/blockstack-integration-tests
+	url = https://github.com/blockstack/blockstack-integration-tests.git
+[submodule "ext/blockstack/pybitcoin"]
+	path = ext/blockstack/pybitcoin
+	url = https://github.com/blockstack/pybitcoin.git
+[submodule "ext/blockstack/keychain-manager-py"]
+	path = ext/blockstack/keychain-manager-py
+	url = https://github.com/blockstack/keychain-manager-py
+[submodule "ext/blockstack/keylib-py"]
+	path = ext/blockstack/keylib-py
+	url = https://github.com/blockstack/keylib-py
+[submodule "ext/bitcoin/python-bitcoinlib"]
+	path = ext/bitcoin/python-bitcoinlib
+	url = https://github.com/petertodd/python-bitcoinlib.git
