--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "ext/bitcoin/two1-sell-boilerplate"]
 	path = ext/bitcoin/two1-sell-boilerplate
 	url = https://github.com/21dotco/two1-sell-boilerplate.git
+[submodule "ext/web"]
+	path = ext/web
+	url = https://github.com/webpy/webpy.git
