add-google-git: gitiles,bucklets

--- a/.gitmodules
+++ b/.gitmodules
@@ -132,4 +132,7 @@
 	url = https://github.com/evanplaice/pypreprocessor.git
 [submodule "app/gitiles"]
 	path = app/gitiles
-	url = https://gerrit.googlesource.com/gitiles
+	url = https://gerrit.googlesource.com/gitiles.git
+[submodule "app/bucklets"]
+	path = app/bucklets
+	url = https://gerrit.googlesource.com/bucklets.git
