--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "app/git/bucklets"]
 	path = app/git/bucklets
 	url = https://gerrit.googlesource.com/bucklets.git
+[submodule "app/photon"]
+	path = app/photon
+	url = https://github.com/connors/photon.git
