--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "app/photon"]
 	path = app/photon
 	url = https://github.com/connors/photon.git
+[submodule "ext/ngrok"]
+	path = ext/ngrok
+	url = https://github.com/inconshreveable/ngrok.git
