--- a/.deosrc
+++ b/.deosrc
@@ -19,13 +19,13 @@ export DeOS_BOOT_ARGS_NGINX:=-e
 export DeOS_BOOT_ARGS_PYTHON:=-c python
 export DeOS_BOOT_PATH:=/deos/boot
 export DeOS_BOOT_SCRIPT:=./src/build.sh
-export DeOS_BUILD_BITCOIN:=$(TRUE)
-export DeOS_BUILD_BLOCKSTACK:=$(TRUE)
-export DeOS_BUILD_DOCKER:=$(TRUE)
-export DeOS_BUILD_NGINX:=$(TRUE)
-export DeOS_BUILD_PYTHON:=$(TRUE)
+export DeOS_BUILD_BITCOIN:=$(FALSE)
+export DeOS_BUILD_BLOCKSTACK:=$(FALSE)
+export DeOS_BUILD_DOCKER:=$(FALSE)
+export DeOS_BUILD_NGINX:=$(FALSE)
+export DeOS_BUILD_PYTHON:=$(FALSE)
 export DeOS_CONFIG_DEBUG:=$(FALSE)
-export DeOS_CONFIG_FASTBOOT:=$(FALSE)
+export DeOS_CONFIG_FASTBOOT:=$(TRUE)
 export DeOS_HOST_OS:=$(shell uname -s)
 export DeOS_RUN_SERVER:=$(FALSE)
 export DeOS_VM_BOX:=bento/ubuntu-16.04
@@ -54,7 +54,7 @@ endif
 export BUILDDOCKER:=$(FALSE)
 export BUILDJS:=$(FALSE)
 export BUILDNGINX:=$(FALSE)
-export BUILDZT:=$(TRUE)
+export BUILDZT:=$(FALSE)
 export BUILDNOTEBOOK:=$(FALSE)
 export DeOS_FILESYNC:=$(TRUE)
 
