--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,41 @@
-dist: trusty
+dist:
+- trusty
 
-language: generic
+language:
+- generic
 
-os: linux
+os:
+- linux
 
-sudo: false
+sudo:
+- false
 
 before_install:
-  - echo 'before_install'
+- echo 'before_install'
 
 install:
-  - echo 'install'
+- echo 'install'
 
 before_script:
-  - echo 'before_script'
+- echo 'before_script'
 
 script:
-  - echo 'script'
+- echo 'script'
+
+after_success:
+- echo 'after_success'
+
+after_failure:
+- echo 'after_failure'
+
+before_deploy:
+- echo 'before_deploy'
+
+deploy:
+- echo 'deploy'
+
+after_deploy:
+- echo 'after_deploy'
 
 after_script:
-  - echo 'after_script'
+- echo 'after_script'
