--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-dist:
-- trusty
+sudo: false
+
+language: generic
+
+osx_image: xcode8
+
+dist: trusty
 
 env:
   global:
@@ -7,18 +12,9 @@ env:
   matrix:
   - B=two
 
-language:
-- generic
-
 os:
 - linux
 - osx
-
-osx_image:
-- xcode8
-
-sudo:
-- false
 
 before_install:
 - echo 'before_install'
@@ -31,21 +27,6 @@ before_script:
 
 script:
 - echo 'script'
-
-after_success:
-- echo 'after_success'
-
-after_failure:
-- echo 'after_failure'
-
-before_deploy:
-- echo 'before_deploy'
-
-deploy:
-- echo 'deploy'
-
-after_deploy:
-- echo 'after_deploy'
 
 after_script:
 - echo 'after_script'
