--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,25 @@
-compiler:
-- clang
-- gcc
-
-dist:
-- trusty
-
-env:
-  global:
-  - A=one
-  matrix:
-  - B=two
-
-language:
-- c
-
-os:
-- linux
-- osx
-
-osx_image:
-- xcode8
-
-sudo:
-- false
+sudo: required
+dist: trusty
+os: linux
+language: generic
 
 before_install:
 - echo 'before_install'
-
 install:
 - echo 'install'
-
 before_script:
 - echo 'before_script'
-
 script:
 - echo 'script'
-
 after_success:
 - echo 'after_success'
-
 after_failure:
 - echo 'after_failure'
-
 before_deploy:
 - echo 'before_deploy'
-
 deploy:
 - echo 'deploy'
-
 after_deploy:
 - echo 'after_deploy'
-
 after_script:
 - echo 'after_script'
