--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
 #[dotfiles]
 .DS_Store
+
 #[dotfolders]
+.deos/
+
 #[files]
+npm-debug.log
+yarn-error.log
+
 #[folders]
+node_modules/
+var/log/*
+
 #[wildcards]
 *.o
 *.pyc
+
+#[except]
+!var/log/.gitprivate
