--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
-sudo: required
-
 dist: trusty
-
-os: linux
 
 language: generic
 
+os: linux
+
+sudo: false
+
 before_install:
-- echo 'before_install'
+  - echo 'before_install'
 
 install:
-- echo 'install'
+  - echo 'install'
 
 before_script:
-- echo 'before_script'
+  - echo 'before_script'
 
 script:
-- echo 'script'
+  - echo 'script'
 
 after_script:
-- echo 'after_script'
+  - echo 'after_script'
