--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 etc/blockstack/*
 etc/zerotier/*
 node_modules/
+var/backup/*
 var/log/deos/*
 
 #[dotfiles]
@@ -21,4 +22,5 @@ yarn-error.log
 #[except]
 !etc/blockstack/.gitprivate
 !etc/zerotier/.gitprivate
+!var/backup/.gitprivate
 !var/log/deos/.gitprivate
