--- a/etc/deos/Makefile.yml
+++ b/etc/deos/Makefile.yml
@@ -1,11 +1,27 @@
+type: object
+required: [makeflags, default_goal, phony, sublime_targets, config_file, all]
+properties:
+
+  makeflags: {type: string}
+  default_goal: {type: string}
+  phony: {type: string}
+  sublime_targets: {type: string}
+  config_file: {type: string}
+
+  all:
+    type: object
+    required: [hook, 'if:host;is:mac', else]
+
+    hook:
+      type: object
+      required: [pre, post]
+
+---
+
 makeflags: --no-print-directory
-
 default_goal: all
-
 phony: all bin build check chmod clean init rm sh venv vm
-
 sublime_targets: all
-
 config_file: .deosrc
 
 all:
