--- a/.deosrc
+++ b/.deosrc
@@ -1,1 +1,11 @@
+FALSE:=0
+TRUE:=1
+
+IS_FALSE:=$(FALSE)
+IS_TRUE:=$(TRUE)
+
+IS_MAC:=Darwin
+IS_LINUX:=Linux
+
 BASEDIR:=$(CURDIR)
+USECACHE:=$(TRUE)
