--- a/.deosrc
+++ b/.deosrc
@@ -16,3 +16,5 @@ PRINTM:=$(BASEDIR)/.deos/bin/darwin/print
 else
 PRINTM:=$(BASEDIR)/.deos/bin/travis/print
 endif
+
+export DeOS_VM_BOX:=bento/ubuntu-16.04
