--- a/.deosrc
+++ b/.deosrc
@@ -3,17 +3,20 @@ TRUE:=1
 
 IS_FALSE:=$(FALSE)
 IS_TRUE:=$(TRUE)
-
 IS_MAC:=Darwin
 IS_LINUX:=Linux
 
 BASEDIR:=$(CURDIR)
 HOSTOS:=$(shell uname -s)
+ISFALSE:=$(FALSE)
+ISLINUX:=Linux
+ISMAC:=Darwin
+ISTRUE:=$(TRUE)
 SETCACHE:=$(TRUE)
 USECACHE:=$(FALSE)
 
 UPCMD:="vagrant up --provider virtualbox"
-ifeq ($(HOSTOS),$(IS_MAC))
+ifeq ($(HOSTOS),$(ISMAC))
 LOGGER:=$(BASEDIR)/.deos/bin/darwin/logger
 PRINTM:=$(BASEDIR)/.deos/bin/darwin/print
 SPINNER:=$(BASEDIR)/.deos/bin/darwin/spinner
