--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ etc/zerotier/*
 node_modules/
 var/backup/*
 var/log/deos/*
+var/privkey/*
 
 #[dotfiles]
 .DS_Store
@@ -27,3 +28,4 @@ yarn-error.log
 !etc/zerotier/.gitprivate
 !var/backup/.gitprivate
 !var/log/deos/.gitprivate
+!var/privkey/.gitprivate
