--- a/.deosrc
+++ b/.deosrc
@@ -18,6 +18,8 @@ OBJ                := $(CURDIR)/obj/darwin
 SRC                := $(CURDIR)/src
 MACRO              := $(INCLUDE)/.macro
 VENV               := $(CURDIR)/venv/darwin
+FILES              := $(wildcard $(LIB)/*.c)
+OBJECTS            := $(patsubst $(LIB)/%,$(OBJ)/%,$(FILES:.c=.o))
 CC                 := clang
 CFLAGS             := -std=c89 -Wall -g
 CEXE               := $(BIN)/darwin/deos
