--- a/.deosrc
+++ b/.deosrc
@@ -8,7 +8,9 @@ export MAKEFLAGS   := --no-print-directory
                       install\
                       run\
                       test\
-                      uninstall
+                      uninstall\
+                      vault
+APP                := $(CURDIR)/app
 BIN                := $(CURDIR)/bin
 ETC                := $(CURDIR)/etc
 EXT                := $(CURDIR)/ext
@@ -17,6 +19,7 @@ LIB                := $(CURDIR)/lib
 OBJ                := $(CURDIR)/obj/darwin
 SRC                := $(CURDIR)/src
 MACRO              := $(INCLUDE)/.macro
+VAULT              := $(APP)/vault
 VENV               := $(CURDIR)/venv/darwin
 FILES              := $(wildcard $(LIB)/*.c)
 OBJECTS            := $(patsubst $(LIB)/%,$(OBJ)/%,$(FILES:.c=.o))
@@ -39,3 +42,11 @@ SIP                := ext/sip
 VIRTUAL            := venv/darwin
 XMCC               := cd $(SRC) && python xmcc.py
 XMOD               := chmod +x
+UI_GENERATED := \
+	app/vault/src/ui_mainwindow.py \
+	app/vault/src/ui_addgroup_dialog.py \
+	app/vault/src/ui_trezor_passphrase_dialog.py \
+	app/vault/src/ui_add_password_dialog.py \
+	app/vault/src/ui_initialize_dialog.py \
+	app/vault/src/ui_enter_pin_dialog.py \
+	app/vault/src/ui_trezor_chooser_dialog.py
