--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_style=space
 insert_final_newline=true
 trim_trailing_whitespace=true
 
-[*.{css,html,md,hcl,xml,ui,json,js,jsx,pug,yml,lz,sh}]
+[*.{css,html,rb,md,hcl,xml,ui,json,js,jsx,pug,yml,lz,sh}]
 indent_size=2
 
 [{*.mk,.deosrc,.env,Makefile,makefile}]
