--- a/.gitmodules
+++ b/.gitmodules
@@ -1,63 +1,63 @@
 [submodule "ext/bitcoin"]
 	path = ext/bitcoin
-	url = git@github.com:47d/bitcoin.git
+	url = https://github.com/47d/bitcoin.git
 [submodule "ext/urbit"]
 	path = ext/urbit
-	url = git@github.com:urbit/urbit.git
+	url = https://github.com/urbit/urbit.git
 [submodule "docs/bips"]
 	path = docs/bips
-	url = git@github.com:47d/bips.git
+	url = https://github.com/47d/bips.git
 [submodule "ext/bitcoinj"]
 	path = ext/bitcoinj
-	url = git@github.com:47d/bitcoinj.git
+	url = https://github.com/47d/bitcoinj.git
 [submodule "ext/chipsec"]
 	path = ext/chipsec
-	url = git@github.com:47d/chipsec.git
+	url = https://github.com/47d/chipsec.git
 [submodule "ext/bcoin"]
 	path = ext/bcoin
-	url = git@github.com:47d/bcoin.git
+	url = https://github.com/47d/bcoin.git
 [submodule "ext/cgminer"]
 	path = ext/cgminer
-	url = git@github.com:47d/cgminer.git
+	url = https://github.com/47d/cgminer.git
 [submodule "ext/trezor-agent"]
 	path = ext/trezor-agent
-	url = git@github.com:47d/trezor-agent.git
+	url = https://github.com/47d/trezor-agent.git
 [submodule "ext/monero"]
 	path = ext/monero
-	url = git@github.com:monero-project/monero.git
+	url = https://github.com/monero-project/monero.git
 [submodule "ext/electrum"]
 	path = ext/electrum
-	url = git@github.com:47d/electrum.git
+	url = https://github.com/47d/electrum.git
 [submodule "ext/bit"]
 	path = ext/bit
-	url = git@github.com:47d/bit.git
+	url = https://github.com/47d/bit.git
 [submodule "app/bitcoin.team"]
 	path = app/bitcoin.team
-	url = git@github.com:47d/bitcoin.team.git
+	url = https://github.com/47d/bitcoin.team.git
 [submodule "app/bitcoin.sh"]
 	path = app/bitcoin.sh
-	url = git@github.com:47d/bitcoin.sh.git
+	url = https://github.com/47d/bitcoin.sh.git
 [submodule "docs/bitcoin.org"]
 	path = docs/bitcoin.org
-	url = git@github.com:47d/bitcoin.org.git
+	url = https://github.com/47d/bitcoin.org.git
 [submodule "app/chain.wiki"]
 	path = app/chain.wiki
-	url = git@github.com:47d/chainwiki.git
+	url = https://github.com/47d/chainwiki.git
 [submodule "app/B.ws"]
 	path = app/B.ws
 	url = https://github.com/47d/47d.git
 [submodule "docs/macos-security"]
 	path = docs/macos-security
-	url = git@github.com:47d/macOS-Security-and-Privacy-Guide.git
+	url = https://github.com/47d/macOS-Security-and-Privacy-Guide.git
 [submodule "ext/webtorrent"]
 	path = ext/webtorrent
-	url = git@github.com:feross/webtorrent.git
+	url = https://github.com/feross/webtorrent.git
 [submodule "ext/btcd"]
 	path = ext/btcd
-	url = git@github.com:47d/btcd.git
+	url = https://github.com/47d/btcd.git
 [submodule "ext/cuckoo"]
 	path = ext/cuckoo
-	url = git@github.com:47d/cuckoo.git
+	url = https://github.com/47d/cuckoo.git
 [submodule "app/btc.slack.com"]
 	path = app/btc.slack.com
-	url = git@github.com:47d/btc.slack.com.git
+	url = https://github.com/47d/btc.slack.com.git
